--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.9",
     "axios": "^1.5.0",
+    "debug": "^4.3.4",
     "mobx-react-lite": "^4.0.4",
     "mobx-state-tree": "^5.1.8",
     "next": "13.4.19",
